--- a/lab5/EditorTest/output/index.html
+++ b/lab5/EditorTest/output/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 <p>text</p>
-<img src="image/mlrzmszgdz.png" width="800" height="600">
+<img src="image/azxzpdnftw.png" width="800" height="600">
 </body>
 </html>
