--- a/lab5/Editor/test.html
+++ b/lab5/Editor/test.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>title</title>
 </head>
 <body>
-<p>first Text</p>
 <p>text</p>
 <img src="image/yzbogbgnbt.png" width="800" height="600">
+<img src="image/rejdoweqdc.png" width="800" height="200">
 </body>
 </html>
